# CMSC630

./: .gitignore  CMakeLists.txt  README.md  batch.p1.yml  batch.p2.yml  batch.p3.yml  batch.yml  format_msqe_results.py  format_results.py
src/: main.cpp  main_knn.cpp
src/classification/: knn.cpp
src/dataset/: get_class_names.cpp  get_images_by_class.cpp  load_features_csv.cpp
src/feature_extraction/: _segment_flood_fill.cpp  average_cell_size.h  calculate_area.cpp  largest_cell_size.h  number_of_cells.h  smallest_cell_size.h
src/filter/: binary_theshold.cpp  grayscale.cpp  kernel_linear.cpp  median_filter.cpp  noise_gaussian.cpp  noise_salt_and_pepper.cpp  non_uniform_quantization.cpp  uniform_quantization.cpp
src/filters/: grayscale.cpp  noise_salt_and_pepper.cpp
src/histogram/: apply_histogram_equalization.cpp  create_histogram.cpp  create_histogram_mat.cpp
src/morphological_filter/: dilation.cpp  erosion.cpp
src/segmentation/: histogram_k_means_clustering.cpp  histogram_threshold.cpp  histogram_threshold_calculate.cpp
src/segmentation/edge_detection/: generic_edge_operator.cpp  improved_sobel.cpp  prewitt.cpp  sobel.cpp
